--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,9 +1,3 @@
-.albums-cover {
-  width: 240px;
-  height: 240px;
-}
-.artists-cover {
-  width: 240px;
-  height: 240px;
-  border-radius: 50%;
-}
+@import "./home";
+@import "./list";
+@import "./listItem";
