--- a/src/styles/_list.scss
+++ b/src/styles/_list.scss
@@ -1,9 +1,11 @@
 .container {
   margin: 10px;
   border-style: solid;
+  width: 1650px;
   & > h1 {
     position: relative;
     text-transform: capitalize;
+    display: inline;
     font-size: 40px;
     left: 15vw;
   }
