--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,11 +1,13 @@
 .container {
   margin: 10px;
   border-style: solid;
+  width: 1650px;
 }
 
 .container > h1 {
   position: relative;
   text-transform: capitalize;
+  display: inline;
   font-size: 40px;
   left: 15vw;
 }
@@ -17,7 +19,6 @@
 }
 
 .list-item {
-  background-color: red;
   width: 270px;
   padding: 10px;
   margin: 20px;
